<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <!--desa: 0GnqeXeroFjywL9df0WrJpTEwFsWxFYCGqDe6xw-->
    <!--prod: 0GnqeXeroFjx1WO86oHtJzekPzOFGJhZmKYDe4A-->
    <string name="app_name">Desarrollo por Cliente</string>
    <string name="apikey">0GnqeXeroFjx1WO86oHtJzekPzOFGJhZmKYDe4A</string>
    <string name="login_activity_title">Login</string>
    <string name="login_activity_ingresar">Ingresar</string>
    <string name="login_activity_usuario">Usuario :</string>
    <string name="login_activity_password">Password :</string>
    <string name="login_activity_usuario_hint">Ingresar Usuario</string>
    <string name="login_activity_password_hint">Ingresar Password</string>
    <string name="login_activity_ok">Bienvenido: %s.</string>
    <string name="login_activity_error">%s</string>
    <string name="login_activity_txtlogin_empty">Debes ingresar tu usuario</string>
    <string name="login_activity_txtpassword_empty">Debes ingresar tu password</string>
    <string name="oportunidad_activity_boton_guardar">Guardar</string>
    <string name="consultarcliente_activity_title">ADN - Consultar Cliente</string>
    <string name="consultarcliente_activity_codigo">Código :</string>
    <string name="consultarcliente_activity_codigo_hint">Ingresar Código</string>
    <string name="consultarcliente_activity_ruc">Ruc :</string>
    <string name="consultarcliente_activity_ruc_hint">Ingresar Ruc</string>
    <string name="consultarcliente_activity_dni">Dni :</string>
    <string name="consultarcliente_activity_dni_hint">Ingresar Dni</string>
    <string name="consultarcliente_activity_razon">Razón Social :</string>
    <string name="consultarcliente_activity_razonsocial_hint">Ingresar Razón Social</string>
    <string name="consultarcliente_activity_buscar">Buscar</string>
    <string name="consultarcliente_activity_empty">Debes ingresar un dato de busqueda</string>
    <string name="ver_detalle">Detalle</string>
    <string name="ver_resumen">Resumen</string>
    <string name="ver_profit">Profit</string>
    <string name="cabeceracliente_activity_title">Evaluación de Compromisos</string>
    <string name="resumen_activity_title">Resumen Evaluación</string>
    <string name="compromiso_activity_title">Compromisos</string>
    <string name="oportunidad_activity_title">Selección de Oportunidades</string>
    <string-array name="puntos_desarrollador">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="oportunidaddesarrollador_activity_title">Oportunidades Desarrollador</string>
    <string-array name="confirmacion">
        <item>NO</item>
        <item>SI</item>
    </string-array>
    <string name="informacionadicional_activity_title">Combos</string>
    <string name="btnguardar">Guardar</string>
    <string name="compromiso_open_cerrar">Cerrar</string>
    <string name="compromiso_open_guardar">Guardar</string>
    <string name="compromiso_open_cancelar">Cancelar</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="ver_SKU">Precio Marcado Skus Prioritarios</string>
    <string name="consultarposicion_activity_title">Posición</string>
    <string name="consultarpresentacion_activity_title">Presentación</string>
    <string name="ver_fotoInicial">Foto Inicial</string>
    <string name="ver_fotoExito">Foto Exito</string>
    <string name="ver_fotoFinal">Foto Final</string>
    <string name="consultarposicioncompromisoclose_activity_title">Compromisos Posición</string>
    <string name="consultarpresentacioncompromisoclose_activity_title">Compromisos Presentación</string>
    <string name="ver_foto_activity_title">Foto</string>
    <string name="ver_compromisos">Compromisos : </string>
    <string name="guardar_compromiso">Guardar</string>
    <string name="sku_prioritario">SKU Prioritario</string>
    <string name="sku_valor_actual">Act.</string>
    <string name="sku_valor_compromiso">Comp.</string>
    <string name="sku_valor_confirmacion">Cumplio?</string>
    <string name="skuprioritario_activity_boton_ok">OK</string>
    <string name="oportunidad_activity_boton_siguiente">Siguiente</string>
    <string name="skuprioritario_activity_title">PRESENTACION – Marcar Respeto de Precio</string>
    <string name="btnExitoText">Compromiso</string>
    <string name="compromiso_guardar">Guardar</string>
    <string name="compromiso_agregar">Agregar</string>
    <string name="compromiso_title">Compromisos</string>
    <string name="compromiso_ok">OK</string>
    <string name="cajas_fisicas">CF</string>
    <string name="margen_actual">Mg. Actual</string>
    <string name="cajas_faltantes">Faltan CF</string>
    <string name="margen_faltante">Mg. Falt.</string>
    <string name="ver_foto">Ver Foto</string>
    <string name="verproductoscanje_activity_title">Productos Canje</string>
    <string name="articulo_descripcion">Articulo Canje</string>
    <string name="puntos_ariculo">Puntos</string>
    <string name="compromiso_quitar">Quitar</string>
    <string name="app_salir">Salir</string>
    <string name="confirm_exit_title">Salir</string>
    <string name="confirm_exit_message">¿Desea salir de ADN?</string>
    <string name="confirm_exit_yes">SI</string>
    <string name="confirm_exit_no">NO</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="confirm_cancelar_title">Cancelar</string>
    <string name="confirm_cancelar_message">¿Desea salir de la evaluación?</string>
    <string name="confirm_cancelar_yes">SI</string>
    <string name="confirm_cancelar_no">NO</string>
    <string name="skuprioritario_activity_boton_guardar">Guardar</string>
    <string name="skuprioritario_activity_boton_cancelar">Cancelar</string>
    <string name="confirm_atras_title">Cancelar</string>
    <string name="confirm_atras_message">¿Desea volver a la busqueda de clientes?</string>
    <string name="confirm_atras_yes">SI</string>
    <string name="confirm_atras_no">NO</string>
    <string name="oportunidad_activity_boton_cancelar">Cancelar</string>
    <string-array name="numero_sabores">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="sku_estados">
        <item>NO</item>
        <item>SI</item>
        <item>NV</item>
    </string-array>
    <string name="eliminar_evaluacion">Eliminar</string>
    <string name="compromisoopen_content_puntos">Puntos:</string>
    <string name="compromisoopen_content_legacy">Legacy:</string>
    <string name="compromisoopen_content_producto">Producto:</string>
    <string name="compromisoopen_content_concreciones">CONCRECIONES</string>
    <string name="compromisoopen_content_actual">Actual:</string>
    <string name="compromisoopen_content_compromiso">Compromiso:</string>
    <string name="compromisoopen_content_sovi">SOVI</string>
    <string name="compromisoopen_content_marcaprecio">MARCA PRECIO</string>
    <string name="compromisoopen_content_sabores">SABORES</string>
    <string name="compromisoopen_content_acciones_trade">Acciones Trade:</string>
    <string name="compromisoopen_content_fecha">Fecha:</string>
    
    <string name="posicionopen_content_activos">Activos Lindley:</string>
    <string name="posicionopen_content_puntos">Puntos:</string>
    <string name="posicionopen_content_red">Red</string>
    <string name="posicionopen_content_exhibicion">Std.Exhibición</string>
    <string name="posicionopen_content_puntomax">Puntos Máximo:</string>
    <string name="posicionopen_content_observacion">Observación:</string>
    <string name="posicionopen_content_fechacompromiso">Fecha Compromiso:</string>
    
   <string name="evaluacion_tabs_menu_grabar">Grabar</string>
   <string name="evaluacion_tabs_menu_cancelar">Cancelar</string>
   <string name="evaluacion_msg_error_sovi">Los valores de SOVI deben ser mayores a 0.</string>
   <string name="evaluacion_msg_error_fecha">Debes indicar las fechas de compromiso.</string>
   <string name="evaluacion_msg_error_inventario">Debe editar valores de la pestaña inventario.</string>
   <string name="evaluacion_msg_error_posicion">Debe editar valores de la pestaña posición.</string>
   <string name="evaluacion_msg_error_presentacion">Debe editar valores de la pestaña presentación.</string>
   <string name="evaluacion_msg_error_combos">Debe editar valores de la pestaña combos.</string>
   <string name="evaluacion_msg_grabar_ok">Se guardaron los datos satisfactoriamente.</string>
   <string name="evaluacion_msg_grabar_error">Error guardaron evaluación, por favor vuelva intentar.</string>
   
    <string name="isOK">OK?</string>
     <string name="cumplio">Cumplio:</string>
     
    <string name="presentacionopen_content_puntos">Puntos:</string>
    <string name="presentacionopen_content_fecha">Fecha Compromiso:</string>
    
    <string name="consultarcliente_menu_descargar">Descargar</string>
    <string name="consultarcliente_menu_enviar">Enviar</string>
    <string name="consultarcliente_menu_salir">Salir</string>
    
    <string name="consultarcabecera_menu_editar">Editar</string>
    <string name="consultarcabecera_menu_eliminar">Eliminar</string>
    <string name="consultarcabecera_menu_detalle">Detalle</string>
    <string name="consultarcabecera_menu_resumen">Resumen</string>
    <string name="consultarcabecera_menu_cerrar">Cerrar</string>
    
    <string name="consultarcabecera_head_codigo">Código</string>
    <string name="consultarcabecera_head_fecha">Fecha</string>
    <string name="consultarcabecera_head_hora">Hora</string>
    <string name="consultarcabecera_head_fecha_cierre">Fecha Cierre</string>
    <string name="consultarcabecera_head_hora_cierre">Hora Cierre</string>
    <string name="consultarcabecera_head_estado">Estado</string>
</resources>
