<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
      <com.thira.examples.actionbar.widget.ActionBar
		android:id="@+id/actionBar" 
		android:layout_width="fill_parent"
		android:layout_height="44dip" />
      
  <RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
        <TableLayout android:stretchColumns="1" 
  	android:id="@+id/tableLayout1" 
  	android:layout_height="wrap_content" 
  	android:layout_width="fill_parent"
  	android:layout_alignParentTop="true">
        <TableRow
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content">
        		
            <TextView android:text="@string/consultarcliente_activity_codigo" android:layout_height="wrap_content" android:layout_weight="0" android:layout_width="fill_parent"></TextView>
            <EditText android:id="@+id/txtCodigo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/consultarcliente_activity_codigo_hint" android:text="" android:layout_weight="1" android:inputType="number" android:maxLength="11" android:singleLine="true"/>
            	 
           <ImageButton android:onClick="btnbuscar_onclick" android:src="@drawable/btn_search" android:contentDescription="@string/consultarcliente_activity_buscar"></ImageButton>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/consultarcliente_activity_ruc" android:layout_height="wrap_content" android:layout_weight="0" android:layout_width="fill_parent"></TextView>
            <EditText android:id="@+id/txtRuc"
             android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/consultarcliente_activity_ruc_hint" android:text="" android:layout_weight="1" android:inputType="number" android:maxLength="11" android:singleLine="true"></EditText>
     		<ImageButton android:onClick="btnbuscar_onclick" android:src="@drawable/btn_search" android:contentDescription="@string/consultarcliente_activity_buscar"></ImageButton>
        </TableRow>
       <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/consultarcliente_activity_dni" android:layout_weight="0" android:layout_width="fill_parent"></TextView>
            <EditText android:id="@+id/txtDni"
             android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/consultarcliente_activity_dni_hint" android:text="" android:layout_weight="1" android:inputType="number" android:maxLength="11" android:singleLine="true"></EditText>
        	<ImageButton android:onClick="btnbuscar_onclick" android:src="@drawable/btn_search" android:contentDescription="@string/consultarcliente_activity_buscar"></ImageButton>
        </TableRow>

       <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/consultarcliente_activity_razon" android:layout_height="wrap_content" android:layout_weight="0" android:layout_width="fill_parent"></TextView>
            <EditText android:id="@+id/txtRazonSocial"
             android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/consultarcliente_activity_razonsocial_hint" android:text="" android:layout_weight="1" android:inputType="text" android:maxLength="30" android:singleLine="true"></EditText>
        	<ImageButton android:onClick="btnbuscar_onclick" android:src="@drawable/btn_search" android:contentDescription="@string/consultarcliente_activity_buscar"></ImageButton>
        </TableRow>
        
    </TableLayout>
    
      	<ListView android:id="@+id/android:list" 
    	android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:layout_marginTop="3dip"
		android:layout_below="@+id/tableLayout1"
		 android:drawSelectorOnTop="false"/>
  
  
</RelativeLayout>

</LinearLayout>