<?xml version="1.0" encoding="utf-8"?>

   <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
         <TableRow>
               <TextView style="@style/TextViewHead" android:layout_width="wrap_content" android:layout_height="30dip" android:text="@string/presentacionopen_content_puntos" android:gravity="center_vertical"/>
               <TextView android:id="@+id/txViewPuntos"  android:layout_width="wrap_content" android:layout_height="30dip" android:layout_weight="3"  android:gravity="center_vertical"/>
        </TableRow>
        
      <TableRow>
               <TextView style="@style/TextViewHead" android:layout_width="wrap_content" android:layout_height="30dip" android:text="@string/presentacionopen_content_fecha" android:gravity="center_vertical"/>
               <TextView android:id="@+id/txEditFecha"  android:layout_width="wrap_content" android:layout_height="30dip" android:layout_weight="3"   android:gravity="center_vertical"/>
        </TableRow>

	     
          <TableRow>
	            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/isOK" android:gravity="center_vertical" />
	            <CheckBox android:id="@+id/chkCumplio" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3"  android:gravity="center_vertical"/>
	     </TableRow>
        
          
        <TableRow android:gravity="right" >
                        
            
            <Button
                android:id="@+id/btnSKU"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center_vertical"
                android:text="@string/ver_SKU" 
                android:layout_span="2"/>
           
        </TableRow>
		
    </TableLayout>
    