<?xml version="1.0" encoding="utf-8"?>
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow>
               <TextView style="@style/TextViewHead" android:layout_width="wrap_content" android:layout_height="30dip" android:text="@string/compromisoopen_content_puntos" android:gravity="center_vertical"/>
               <TextView android:id="@+id/txViewPuntos"  android:layout_width="wrap_content" android:layout_height="30dip" android:layout_weight="3"  android:gravity="center_vertical"/>
        </TableRow>
        
        <TableRow android:layout_height="13dip">
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="30dip" android:text="@string/compromisoopen_content_legacy" android:gravity="center_vertical" />
            <TextView android:id="@+id/txViewLegacy" android:layout_width="wrap_content" android:layout_height="30dip" android:layout_weight="3" android:gravity="center_vertical"/>
        </TableRow>
        
        
        <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="30dip" android:text="@string/compromisoopen_content_producto" android:gravity="center_vertical"/>
            <TextView android:id="@+id/txViewPro" android:layout_width="wrap_content" android:layout_height="30dip" android:layout_weight="3" android:gravity="center_vertical"/>
        </TableRow>
        
        
        
        <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="fill_parent" android:layout_height="30dip" android:layout_weight="1"  android:text="@string/compromisoopen_content_concreciones" android:gravity="center_horizontal|center_vertical" />
        </TableRow>
        
         <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="30dip"  android:text="@string/compromisoopen_content_actual" android:gravity="center_vertical" />
            <TextView android:id="@+id/cboConcrecion" android:layout_width="wrap_content" android:layout_height="30dip" android:layout_weight="3" android:gravity="center_vertical"/>
        </TableRow>
        
          <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/compromisoopen_content_compromiso" android:gravity="center_vertical" />
            <TextView android:id="@+id/cboConcrecionCmp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3" android:gravity="center_vertical"/>
        </TableRow>
         
        <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="fill_parent" android:layout_height="30dip" android:layout_weight="1" android:text="@string/compromisoopen_content_sovi" android:gravity="center_horizontal|center_vertical" />
        </TableRow>
        
        
        <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent"  android:text="@string/compromisoopen_content_actual"  android:gravity="center_vertical"/>
            <TextView android:id="@+id/txViewSOVI" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3"  android:clickable="true" android:focusableInTouchMode="true" android:maxLength="5" android:gravity="center_vertical"/>
        </TableRow>
        
        <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent"  android:text="@string/compromisoopen_content_compromiso" android:gravity="center_vertical" />
            <TextView android:id="@+id/txViewSOVICmp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3"  android:clickable="true" android:focusableInTouchMode="true" android:maxLength="5" android:gravity="center_vertical"/>
        </TableRow>
        
		<TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="fill_parent" android:layout_height="30dip" android:layout_weight="1" android:text="@string/compromisoopen_content_marcaprecio" android:gravity="center_horizontal|center_vertical" />
        </TableRow>

        <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent"  android:text="@string/compromisoopen_content_actual" android:gravity="center_vertical" />
            <TextView android:id="@+id/cboCumPrecio" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3"  android:gravity="center_vertical"/>
        </TableRow>
        
        <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/compromisoopen_content_compromiso" android:gravity="center_vertical"/>
            <TextView android:id="@+id/cboCumPrecioCmp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3" android:gravity="center_vertical"/>
        </TableRow>
        		
       	<TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="fill_parent" android:layout_height="30dip" android:layout_weight="1" android:text="@string/compromisoopen_content_sabores" android:gravity="center_horizontal|center_vertical" />
        </TableRow>
        
       <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="30dip" android:text="@string/compromisoopen_content_actual" android:gravity="center_vertical" />
            <TextView android:id="@+id/txViewSabores" android:layout_width="wrap_content" android:layout_height="30dip" android:layout_weight="3" android:gravity="center_vertical"/>
       </TableRow>
       
         <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/compromisoopen_content_compromiso" android:gravity="center_vertical" />
            <TextView android:id="@+id/cboSaboresCmp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3" android:gravity="center_vertical" />
        </TableRow>
        		
        <TableRow>
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/compromisoopen_content_acciones_trade" android:gravity="center_vertical" />
            <TextView android:id="@+id/txViewAccTrade" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3" android:gravity="center_vertical" />
        </TableRow>
       	
        <TableRow>  
            <TextView style="@style/TextViewHead"  android:layout_width="wrap_content" android:layout_height="fill_parent"  android:text="@string/compromisoopen_content_fecha" android:gravity="center_vertical" />
            <TextView android:id="@+id/txEditFecha" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="3" android:gravity="center_vertical" />
            
           
        </TableRow>

     
    </TableLayout>