<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.thira.examples.actionbar.widget.ActionBar
        android:id="@+id/actionBar"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/TextViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Compromiso" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#FF909090" />
            </TableLayout>

            <ListView
                android:id="@+id/android:list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dip"
                android:layout_marginTop="2dip"
                android:drawSelectorOnTop="false"
                android:focusable="false" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:focusable="false"
            android:onClick="btnAgregar_click"
            android:text="@string/compromiso_agregar" >
        </Button>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:focusable="false"
            android:onClick="btnQuitar_click"
            android:text="@string/compromiso_quitar" >
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:focusable="false"
            android:onClick="btnGuardar_click"
            android:text="@string/compromiso_guardar" >
        </Button>
    </LinearLayout>

</LinearLayout>